--- a/bsconfig.json
+++ b/bsconfig.json
@@ -3,7 +3,10 @@
   "namespace": true,
   "version": "0.1.0",
   "sources": [
-    "src", "examples"
+    "src", {
+      "dir": "examples",
+      "type": "dev"
+    }
   ],
   "package-specs": {
     "module": "commonjs",
