--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "bs-platform": "^3.0.0"
+    "bs-platform": "^4.0.0"
   },
   "dependencies": {
-    "bs-async-monad": "^1.0.0",
-    "@lidcore/bs-node": "git+https://github.com/lidcore/bs-node.git"
+    "bs-async-monad": "^1.2.0",
+    "@lidcore/bs-node": "^1.3.0"
   }
 }
