--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lidcore/bs-wav",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "scripts": {
     "clean": "bsb -clean-world",
     "build": "bsb -make-world",
@@ -11,6 +11,9 @@
   ],
   "author": "",
   "license": "MIT",
+  "peerDependencies": {
+    "bs-platform": "^4.0.0"
+  },
   "devDependencies": {
     "bs-platform": "^4.0.0"
   },
